RESOLVED FIXED56226
WebCore::Document should notify ChromeClient when the full screen renderer's backing changes.
https://bugs.webkit.org/show_bug.cgi?id=56226
Summary WebCore::Document should notify ChromeClient when the full screen renderer's ...
Jer Noble
Reported 2011-03-11 14:48:24 PST
WebCore::Document should notify ChromeClient when the full screen renderer's backing changes.
Attachments
Patch (3.48 KB, patch)
2011-03-11 14:54 PST, Jer Noble
no flags
Patch (3.57 KB, patch)
2011-03-11 15:10 PST, Jer Noble
andersca: review+
Jer Noble
Comment 1 2011-03-11 14:54:47 PST
WebKit Review Bot
Comment 2 2011-03-11 14:57:44 PST
Jer Noble
Comment 3 2011-03-11 15:05:54 PST
(In reply to comment #2) > Attachment 85541 [details] did not build on chromium: > Build output: http://queues.webkit.org/results/8132409 Forgot to mark this bug as blocked by #559933, which includes the necessary changes to ChromeClient.h.
Jer Noble
Comment 4 2011-03-11 15:10:24 PST
WebKit Review Bot
Comment 5 2011-03-11 15:14:35 PST
Collabora GTK+ EWS bot
Comment 6 2011-03-11 17:44:25 PST
Eric Seidel (no email)
Comment 7 2011-03-11 19:16:06 PST
Jer Noble
Comment 8 2011-03-11 20:02:35 PST
Jer Noble
Comment 9 2011-03-11 21:03:27 PST
webkit-patch closed the wrong bug. This last commit belongs to #56218.
Jer Noble
Comment 10 2011-03-11 21:29:09 PST
Note You need to log in before you can comment on or make changes to this bug.