Source/WebKit2/WebProcess/WebCoreSupport/WebChromeClient.cpp
@@ -720,6 +720,12 @@ void WebChromeClient::exitFullScreenForElement(WebCore::Element* element)
 {
     m_page->fullScreenManager()->exitFullScreenForElement(element);
 }
+    
+void WebChromeClient::setRootFullScreenLayer(GraphicsLayer* layer)
+{
+    m_page->fullScreenManager()->setRootFullScreenLayer(layer);
+}
+
 #endif
 
 void WebChromeClient::dispatchViewportDataDidChange(const ViewportArguments& args) const
